# Reality

my-tauri-app/: package-lock.json  package.json
my-tauri-app/src/: App.svelte  app.css
my-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
my-tauri-app/src-tauri/capabilities/: default.json
my-tauri-app/src-tauri/src/: main.rs
my-tauri-app/src/lib/: DeviceList.svelte  FileDropZone.svelte  TransferHistory.svelte
my-tauri-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
