[package]
name = "my-tauri-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
dirs = "5.0"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
base64 = "0.21"
